k8s/dependencies/kibana/elasticsearch.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: elasticsearch
  name: elasticsearch
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: elasticsearch
  serviceName: elasticsearch
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: elasticsearch
    spec:
      terminationGracePeriodSeconds: 300
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.8.0
          imagePullPolicy: Always
          volumeMounts:
            - name: elasticsearch-data
              mountPath: /data
          resources: {}
          ports:
            - name: http
              containerPort: 9200
              protocol: TCP
            - name: transport
              containerPort: 9300
              protocol: TCP
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: elasticsearch-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: "30Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app.kubernetes.io/name: elasticsearch
spec:
  type: LoadBalancer
  ports:
    - port: 9200
      targetPort: http
      protocol: TCP
      name: http
    - port: 9300
      targetPort: transport
      protocol: TCP
      name: transport
  selector:
    app.kubernetes.io/name: elasticsearch
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-es-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - kibana-es-stage.predictivemovement.se
      secretName: predictivemovement-kibana-es-prod-tls
  rules:
    - host: kibana-es-stage.predictivemovement.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elasticsearch
                port:
                  number: 9200
