k8s/dependencies/kibana/kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: rorla-stage

spec:
  ports:
    - port: 5601
  type: LoadBalancer
  selector:
    app: kibana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kibana
  name: kibana
  namespace: rorla-stage

spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - env:
            - name: ELASTICSEARCH_HOST
              value: elasticsearch:9200
          image: docker.elastic.co/kibana/kibana:7.5.1
          imagePullPolicy: Always
          name: kibana
          ports:
            - containerPort: 5601
              name: http
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - kibana'
spec:
  tls:
    - hosts:
        - kibana-stage.predictivemovement.se
      secretName: predictivemovement-kibana-prod-tls
  rules:
    - host: kibana-stage.predictivemovement.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
